# TeamProject-LexNorm

./: .gitignore  README.md  README_KR.md  main.py  pyproject.toml
baseline/: README.md  __init__.py  requirements.txt  run_baseline.py  shared.py  utils.py
member1/: README.md  __init__.py
member2/: README.md  __init__.py  notes.md
member3/: README.md  __init__.py
member_ky/: README.md  T5_BYT5_PLAN.md  __init__.py  compare_model.py  create_gold_review_sheets.py  notes.md  requirements_byt5.txt  run_experiment.py  run_model.py
member_ky/src/: __init__.py
member_ky/src/data/: __init__.py  hf_dataset.py
member_ky/src/evaluation/: __init__.py  compare.py  metrics.py
member_ky/src/model/: __init__.py  public_byt5.py  registry.py  rule_based.py
member_ky/src/util/: __init__.py  io.py
member_ky/temp/: README.md
