[project]
name = "ai-intro"
version = "0.1.0"
description = "Root uv environment for the AI Intro MultiLexNorm baseline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=2.19.2,<3",
    "numpy>=2,<3",
    "pandas>=2.2,<3",
    "pyarrow>=19,<21",
]

[tool.uv]
package = false
